gl31-master/src/test/deca/lex/valid/sansobjet/boolean_simple.deca
// Description:
//    tests de programme correct lexicalement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021

{
    boolean unBoolean = true;
    boolean unAutreBoolean = false;
}
