gl31-master/src/test/deca/lex/invalid/sansobjet/accents.deca
// Description:
//    tests de programme incorrect lexicalement pour sans-objet
//
// Resultats:
//    Ligne 10 : Erreur, 'prit' n'existe pas
//
// Historique:
//    cree le 08/01/2021
{
    accentué
}
